# gbc_emulator

./: CMakeLists.txt  backup.txt  docker-compose.yaml  scrap_code.txt  scratch.txt  stuff
include/: Cpu.h  Debugger.h  DisplayBuffer.h  Logger.h  Memory.h  Opcode.h  PPU.h  Ppu.h  Register.h  Singleton.h  Utils.h
include/Display/: DisplayController.h  Screen.h  TileData.h
scripts/: cb_ops.txt  code.txt  make_ops.py  make_unit_tests.py  opcodes.txt  otherstuff.txt  otherstuff2.txt
src/: Cpu.cpp  DisplayBuffer.cc  Memory.cpp  Opcode.cpp  Ppu.cpp  Register.cpp  Utils.cpp  main.cpp  window_main.cpp
tests/: CMakeLists.txt  Main.cpp  OpcodeTests.cpp  testmain.cpp
